// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Literals Array of literals 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.TupleType([MantaStyle.Literal(1), MantaStyle.Literal(2), MantaStyle.Literal(3), MantaStyle.Literal(\\"hello\\"), MantaStyle.Literal(\\"world\\")]);
    return type;
}, []);
"
`;

exports[`Literals Booleans 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.Literal(true);
    return type;
}, []);
"
`;

exports[`Literals Booleans 2`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.Literal(false);
    return type;
}, []);
"
`;

exports[`Literals Numbers 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.Literal(1);
    return type;
}, []);
"
`;

exports[`Literals Strings 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.Literal(\\"test\\");
    return type;
}, []);
"
`;
